--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="images/logo.png" href="Favicon_"/>
+    <link rel="icon" href="logo.png" type="image" sizes="16x16">
     <title>Global Bot</title>
 </head>
 <body>
