--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
            <img src="images/logo.png" alt="">
         </div>
-        <a class="Invite" href="#">Invite to server</a>
+        <a class="invite" href="#">Invite to server</a>
     </div>
 </body>
 </html>
