--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
            <img src="images/logo.png" alt="">
         </div>
         <a class="invite" href="#">Invite to server</a>
+        <p>^^^Coming Soon^^^</p>
     </div>
 </body>
 </html>
