--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="container">
         <div class="logo">
+            <a href="https://discord.com/api/oauth2/authorize?client_id=921446874890788915&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.com&response_type=code&scope=messages.read%20bot%20applications.commands">
            <img src="images/logo.png" alt="">
+            </a>
         </div>
         <a class="invite" href="#">Invite to server</a>
         <p>^^^Coming Soon^^^</p>
