--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" type="image" sizes="16x16">
+    <meta property="og:title" content="Global Bot" />
+    <meta property="og:image" content="images/logo.png" />
     <title>Global Bot</title>
 </head>
 <body>
