--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" type="image" sizes="16x16">
     <meta property="og:title" content="Global Bot" />
-    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:description" content="A website for globalbot. Check out the websitie and explore a bit." />
     <title>Global Bot</title>
 </head>
 <body>
