--- a/pages/features.html
+++ b/pages/features.html
@@ -5,31 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>GlobalBot</title>
 </head>
 <body>
     <header>
         <h1 style="letter-spacing: 3px;">GlobalBot</h1>
         <ul class="nav">
-            <li class="navlink"><a href="#">Home</a></li>
-            <li class="navlink"><a href="./pages/features.html">Features</a></li>
-            <li class="navlink"><a href="./pages/changelog.html">Changelog</a></li>
-            <li class="navlink"><a href="./pages/about.html">About</a></li>
+            <li class="navlink"><a href="../index.html">Home</a></li>
+            <li class="navlink"><a href="#">Features</a></li>
+            <li class="navlink"><a href="./changelog.html">Changelog</a></li>
+            <li class="navlink"><a href="./about.html">About</a></li>
         </ul>
         <div class="burger">
             <i class="fas fa-bars"></i>
         </div>
     </header>
     <div class="container">
-        <h1><span class="input"></span></h1>
-        <div class="logo">
-           <img src="images/logo.png" alt="">
-        </div>
-        <a href="#">Invite to server</a>
+        <h1>WIP</h1>
     </div>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="./index.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
