🔨Fix Noam being dumb

--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
     <div class="container">
         <h1><span class="input"></span></h1>
         <div class="logo">
-            <a href="https://discord.com/api/oauth2/authorize?client_id=921446874890788915&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.com&response_type=code&scope=messages.read%20bot%20applications.commands">
            <img src="images/logo.png" alt="">
             </a>
         </div>
-        <a class="invite" href="#">Invite to server</a>
-        <p>^^^Coming Soon^^^</p>
+        <a class="invite" href="https://discord.com/oauth2/authorize?client_id=921446874890788915&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.com&response_type=code&scope=messages.read%20bot%20applications.commands">Invite to server</a>
     </div>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
