🌟Support Server Link

--- a/404.html
+++ b/404.html
@@ -17,6 +17,8 @@
           </h1>
           <h3 class="fadeIn">PAGE NOT FOUND</h3>
           <button type="button" name="button" onclick="window.location.href='index.html'">Return to Home</button>
+          <h4>If you think this is a mistake, please join our support server <a href="
+            https://discord.gg/Ckvc6kYm">here</a>.</h4>
         </div>
       </div>
 </body>
