--- a/changelog.html
+++ b/changelog.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>GlobalBot</title>
 </head>
 <body>
     <header>
         <h1 style="letter-spacing: 3px;">GlobalBot</h1>
         <ul class="nav">
-            <li class="navlink"><a href="../index.html">Home</a></li>
-            <li class="navlink"><a href="./features.html">Features</a></li>
-            <li class="navlink"><a href="./changelog.html">Changelog</a></li>
-            <li class="navlink"><a href="#">About</a></li>
+            <li class="navlink"><a href="index.html">Home</a></li>
+            <li class="navlink"><a href="features.html">Features</a></li>
+            <li class="navlink"><a href="#">Changelog</a></li>
+            <li class="navlink"><a href="about.html">About</a></li>
         </ul>
         <div class="burger">
             <i class="fas fa-bars"></i>
@@ -26,6 +26,6 @@
     </div>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="../index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
