--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1 style="letter-spacing: 3px;">GlobalBot</h1>
         <ul class="nav">
             <li class="navlink"><a href="#">Home</a></li>
-            <li class="navlink"><a href="./pages/features.html">Features</a></li>
-            <li class="navlink"><a href="./pages/changelog.html">Changelog</a></li>
-            <li class="navlink"><a href="./pages/about.html">About</a></li>
+            <li class="navlink"><a href="features.html">Features</a></li>
+            <li class="navlink"><a href="changelog.html">Changelog</a></li>
+            <li class="navlink"><a href="about.html">About</a></li>
         </ul>
         <div class="burger">
             <i class="fas fa-bars"></i>
@@ -32,6 +32,6 @@
     </div>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
