--- a/404.html
+++ b/404.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Global Bot</title>
-</head>
-<body>
-    <div class="flex-container">
-        <div class="text-center">
-          <h1>
-            <span class="fade-in" id="digit1">4</span>
-            <span class="fade-in" id="digit2">0</span>
-            <span class="fade-in" id="digit3">4</span>
-          </h1>
-          <h3 class="fadeIn">PAGE NOT FOUND</h3>
-          <button type="button" name="button" onclick="window.location.href='index.html'">Return to Home</button>
-          <h4>If you think this is a mistake, please join our support server <a href="
-            https://discord.gg/Ckvc6kYm">here</a>.</h4>
-        </div>
-      </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="https://global-bot.xyz/style.css" />
+		<meta property="og:title" content="Global Bot" />
+		<meta property="og:description" content="GlobalBot - Page not found" />
+		<title>Global Bot</title>
+	</head>
+	<body>
+		<div class="flex-container">
+			<div class="text-center">
+				<h1>
+					<span class="fade-in" id="digit1">4</span>
+					<span class="fade-in" id="digit2">0</span>
+					<span class="fade-in" id="digit3">4</span>
+				</h1>
+				<h3 class="fadeIn">PAGE NOT FOUND</h3>
+				<button
+					type="button"
+					name="button"
+					onclick="window.location.href='index.html'"
+				>
+					Return to Home
+				</button>
+				<h4>
+					If you think this is a mistake, please join our support
+					server
+					<a
+						href="
+            https://discord.gg/Ckvc6kYm"
+						>here</a
+					>.
+				</h4>
+			</div>
+		</div>
+	</body>
 </html>
