--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://global-bot.xyz/style.css" />
+		<link rel="shortcut icon" type="image/png" href="images/logo.png" />
 		<meta property="og:title" content="Global Bot" />
 		<meta property="og:description" content="GlobalBot - Page not found" />
 		<title>Global Bot</title>
@@ -21,7 +22,7 @@
 				<button
 					type="button"
 					name="button"
-					onclick="window.location.href='index.html'"
+					onclick="location.href='https://global-bot.xyz'"
 				>
 					Return to Home
 				</button>
