--- a/features.html
+++ b/features.html
@@ -9,6 +9,7 @@
 			href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		/>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" type="image/png" href="images/logo.png" />
 		<meta property="og:title" content="Global Bot" />
 		<meta property="og:description" content="GlobalBot - Features" />
 		<title>GlobalBot</title>
