--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="logo.png" type="image" sizes="16x16">
+        <link rel="shortcut icon" type="image/png" href="images/logo.png">
         <meta property="og:title" content="Global Bot" />
         <meta property="og:description" content="A website for GlobalBot. Check out the websitie and explore a bit." />
         <title>Global Bot</title>
