--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
 		<header>
 			<h1 style="letter-spacing: 3px;">GlobalBot</h1>
 			<ul class="nav">
-				<li class="navlink"><a href="#">Home</a></li>
+				<li class="navlink"><a href="index.html">Home</a></li>
 				<li class="navlink"><a href="features.html">Features</a></li>
 				<li class="navlink"><a href="changelog.html">Changelog</a></li>
-				<li class="navlink"><a href="about.html">About</a></li>
+				<li class="navlink"><a href="#">About</a></li>
 			</ul>
 			<div class="burger">
 				<i class="fas fa-bars"></i>
