--- a/changelog.html
+++ b/changelog.html
@@ -18,9 +18,9 @@
 		<header>
 			<h1 style="letter-spacing: 3px;">GlobalBot</h1>
 			<ul class="nav">
-				<li class="navlink"><a href="#">Home</a></li>
+				<li class="navlink"><a href="index.html">Home</a></li>
 				<li class="navlink"><a href="features.html">Features</a></li>
-				<li class="navlink"><a href="changelog.html">Changelog</a></li>
+				<li class="navlink"><a href="#">Changelog</a></li>
 				<li class="navlink"><a href="about.html">About</a></li>
 			</ul>
 			<div class="burger">
