--- a/404.html
+++ b/404.html
@@ -5,7 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="https://global-bot.xyz/style.css" />
-		<link rel="shortcut icon" type="image/png" href="images/logoBG.png" />
+		<link
+			rel="shortcut icon"
+			type="image/png"
+			href="https://raw.githubusercontent.com/noam2017/globalbotsite/main/images/logoBG.png"
+		/>
 		<meta property="og:title" content="Global Bot" />
 		<meta property="og:description" content="GlobalBot - Page not found" />
 		<title>Global Bot</title>
