🌟Lots of changes
Page content, animated background and color redesign

--- a/about.html
+++ b/about.html
@@ -28,7 +28,43 @@
 			</div>
 		</header>
 		<div class="container">
-			<h1>WIP</h1>
+			<h1>About</h1>
+			<h3>
+				Hey, welcome to
+				<a
+					href="https://discord.com/api/oauth2/authorize?client_id=921446874890788915&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.com&response_type=code&scope=bot%20messages.read%20applications.commands"
+					>Global Bot</a
+				>. Global Bot is a bot that made of many things.
+			</h3>
+			<h3>
+				We are trying to keep the discord community as a nice and chill
+				community. If you want to add the bot, you are more than welcome
+				to add him!
+			</h3>
+			<h2>Details</h2>
+			<ul>
+				<li>Made in: <strong>2/19/22</strong></li>
+				<li>Published: <strong>Haven't yet</strong></li>
+				<li>
+					Website:
+					<strong
+						><a href="https://global-bot.xyz"
+							>https://global-bot.xyz</a
+						></strong
+					>
+				</li>
+				<li>
+					Bot made with:
+					<strong
+						><a href="https://github.com/nextcord/nextcord"
+							>Nextcord</a
+						></strong
+					>
+				</li>
+			</ul>
+			<h2>Developers:</h2>
+			<h3>Website by: <strong>RedCommand#5228</strong></h3>
+			<h3>Bot by: <strong>LeNoX#0062</strong></h3>
 		</div>
 		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
