--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" type="image/png" href="images/logoBG.png">
-        <meta property="og:title" content="Global Bot" />
-        <meta property="og:description" content="A website for GlobalBot. Check out the websitie and explore a bit." />
-        <title>Global Bot</title>
-    </head>
-    
-    <body>
-        <header>
-            <h1 style="letter-spacing: 3px;">GlobalBot</h1>
-            <ul class="nav">
-                <li class="navlink"><a href="#">Home</a></li>
-                <li class="navlink"><a href="features.html">Features</a></li>
-                <li class="navlink"><a href="changelog.html">Changelog</a></li>
-                <li class="navlink"><a href="about.html">About</a></li>
-            </ul>
-            <div class="burger">
-                <i class="fas fa-bars"></i>
-            </div>
-        </header>
-        <div class="container">
-            <h1><span class="input"></span></h1>
-            <div class="logo">
-                <img src="images/logo.png" alt="">
-                </a>
-            </div>
-            <a class="invite"
-                href="https://discord.com/oauth2/authorize?client_id=921446874890788915&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.com&response_type=code&scope=messages.read%20bot%20applications.commands">Invite
-                to server</a>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="images/logoBG.png">
+    <meta property="og:title" content="Global Bot" />
+    <meta property="og:description" content="A website for GlobalBot. Check out the websitie and explore a bit." />
+    <title>Global Bot</title>
+</head>
+
+<body>
+    <canvas class="background"></canvas>
+    <header>
+        <h1 style="letter-spacing: 3px;">GlobalBot</h1>
+        <ul class="nav">
+            <li class="navlink"><a href="#">Home</a></li>
+            <li class="navlink"><a href="features.html">Features</a></li>
+            <li class="navlink"><a href="changelog.html">Changelog</a></li>
+            <li class="navlink"><a href="about.html">About</a></li>
+        </ul>
+        <div class="burger">
+            <i class="fas fa-bars"></i>
         </div>
-        <footer></footer>
-        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-        <script src="index.js"></script>
-    </body>
-    
-    </html>
+    </header>
+    <div class="container">
+        <h1><span class="input"></span></h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="">
+            </a>
+        </div>
+        <a class="invite"
+            href="https://discord.com/oauth2/authorize?client_id=921446874890788915&permissions=8&redirect_uri=https%3A%2F%2Fdiscord.com&response_type=code&scope=messages.read%20bot%20applications.commands">Invite
+            to server</a>
+    </div>
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="index.js"></script>
+</body>
+
+</html>
