--- a/changelog.html
+++ b/changelog.html
@@ -28,7 +28,8 @@
 			</div>
 		</header>
 		<div class="container">
-			<h1>WIP</h1>
+			<h1>Changelog</h1>
+			<h2>nothin</h2>
 		</div>
 		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
