--- a/features.html
+++ b/features.html
@@ -28,26 +28,7 @@
 			</div>
 		</header>
 		<div class="container">
-			<h1>Features</h1>
-			<h2>Commands:</h2>
-			<h3>help</h3>
-			<h3>meme</h3>
-			<h3>dashboard - Doesnt work yet</h3>
-			<h3>invite - Doesnt work yet</h3>
-			<h3>ping</h3>
-			<h3>prefix</h3>
-			<h3>serverinfo</h3>
-			<h3>channel-info - Doesnt work yet</h3>
-			<h3>whois - Doesnt work yet</h3>
-			<h3>botinfo</h3>
-			<h3>mute</h3>
-			<h3>kick - Doesnt work yet</h3>
-			<h3>ban - Doesnt work yet</h3>
-			<h3>unmute - Doesnt work yet</h3>
-			<h3>setmuterole - Doesnt work yet</h3>
-			<h3>lock</h3>
-			<h3>unlock - Doesnt work yet</h3>
-			<h3>toggle - Doesnt work yet</h3>
+			<h1>We are working on it, please wait.</h1>
 		</div>
 		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
