--- a/changelog.html
+++ b/changelog.html
@@ -28,8 +28,7 @@
 			</div>
 		</header>
 		<div class="container">
-			<h1>Changelog</h1>
-			<h2>nothin</h2>
+			<h1>There is no changelog because we still working on the bot</h1>
 		</div>
 		<footer></footer>
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
